@@ -121,6 +121,10 @@ USE_CODEC_VORBIS=yes
 # but not needed nor meaningful)
 USE_CODEC_TIMIDITY=yes
 USE_CODEC_WILDMIDI=no
+# compile timidity with DLS instruments support? (no:
+# the dls code isn't good enough and isn't used in unix
+# where timidity is normally needed, either.)
+TIMIDITY_USE_DLS=no
 # which library to use for mp3 decoding: mad or mpg123
 MP3LIB=mad
 # which library to use for ogg decoding: vorbis or tremor
@@ -512,6 +516,9 @@ LDFLAGS+= $(lib_mp3dec)
 endif
 ifeq ($(USE_CODEC_TIMIDITY),yes)
 CPPFLAGS+= -DUSE_CODEC_TIMIDITY
+ifeq ($(TIMIDITY_USE_DLS),yes)
+CPPFLAGS+= -DTIMIDITY_USE_DLS
+endif
 LDFLAGS+= -L$(LIBS_DIR)/timidity -ltimidity
 TIMIDEPS=$(LIBS_DIR)/timidity/libtimidity.a
 else
